continued work all over the app

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<div class="panel panel-default">
+  <div class="panel-body">
+    <h1>ALL THE TWEETS!</h1>
+  </div>
+</div>
+
 <h1>Whatever, this is just a header</h1>
 
 <table>
