--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Tweet</h1>
+<div class="panel">
+	<h1>New Tweet</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', tweets_path %>
+	<%= link_to 'Back', tweets_path %>
+</div>
